--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -2687,7 +2687,7 @@
                                 const endSuffix = suffixFor(w.end);
                                 windowsHTML += `<div>${moonIcon} Window ${i+1}: ${start}${startSuffix} – ${end}${endSuffix}</div>`;
                             });
-                            windowsHTML += '<div style="font-size:11px; color:#666; margin-top:4px; font-style:italic;">(-1) and (+1) indicate the previous and next UTC day, respectively.</div></div>';
+                            windowsHTML += '<div style="font-size:11px; color:#666; margin-top:4px; font-style:italic;">(-1) and (+1) denote the previous and next UTC day</div></div>';
                         } else {
                             windowsHTML = '<div style="margin-top:10px; color:#666;"><em>No common window today with your QTH</em></div>';
                         }
