--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -3642,42 +3642,54 @@
                                                 function getMoonPhaseInfo(currentTime) {
                                                     const astroTime = Astronomy.MakeTime(currentTime);
                                                     const illum = Astronomy.Illumination(Astronomy.Body.Moon, astroTime);
+                                                    const lib = Astronomy.Libration(astroTime);
 
-                                                    // illum.phase_fraction = illumination % (0 to 1 → 0% to 100%)
+                                                    // Illumination percentage (0% new → 100% full)
                                                     const illuminationPct = (illum.phase_fraction * 100).toFixed(1);
 
-                                                    // illum.phase_angle = phase angle in degrees (0° = New, 180° = Full)
+                                                    // Phase angle in degrees (~0° at new moon, ~180° at full moon)
                                                     const phaseAngle = illum.phase_angle.toFixed(1);
 
-                                                    // illum.phase_fraction is also the normalized phase (0 to 1)
+                                                    // Normalized phase value: 0.00 at new, 1.00 at full (matches phase_fraction)
                                                     const phaseValue = illum.phase_fraction.toFixed(2);
 
-                                                    // Simple phase name based on phase_fraction
+                                                    // Accurate phase name based on illumination fraction
                                                     let phaseName;
-                                                    if (illum.phase_fraction < 0.02) phaseName = "New Moon";
-                                                    else if (illum.phase_fraction < 0.23) phaseName = "Waxing Crescent";
-                                                    else if (illum.phase_fraction < 0.27) phaseName = "First Quarter";
-                                                    else if (illum.phase_fraction < 0.48) phaseName = "Waxing Gibbous";
-                                                    else if (illum.phase_fraction < 0.52) phaseName = "Full Moon";
-                                                    else if (illum.phase_fraction < 0.73) phaseName = "Waning Gibbous";
-                                                    else if (illum.phase_fraction < 0.77) phaseName = "Last Quarter";
-                                                    else if (illum.phase_fraction < 0.98) phaseName = "Waning Crescent";
-                                                    else phaseName = "New Moon";
+                                                    const frac = illum.phase_fraction;
+                                                    if (frac <= 0.02 || frac >= 0.98) {
+                                                        phaseName = "New Moon";
+                                                    } else if (frac < 0.23) {
+                                                        phaseName = "Waxing Crescent";
+                                                    } else if (frac < 0.27) {
+                                                        phaseName = "First Quarter";
+                                                    } else if (frac < 0.48) {
+                                                        phaseName = "Waxing Gibbous";
+                                                    } else if (frac < 0.52) {
+                                                        phaseName = "Full Moon";
+                                                    } else if (frac < 0.73) {
+                                                        phaseName = "Waning Gibbous";
+                                                    } else if (frac < 0.77) {
+                                                        phaseName = "Last Quarter";
+                                                    } else if (frac < 0.98) {
+                                                        phaseName = "Waning Crescent";
+                                                    } else {
+                                                        phaseName = "New Moon"; // Fallback for exactly 1.00
+                                                    }
 
-                                                    // Angular diameter in degrees (for easy comparison with antenna beamwidth)
-                                                    const lib = Astronomy.Libration(astroTime);
-                                                    const moonRadiusKm = 1737.4; // Mean equatorial radius of the Moon
+                                                    // Apparent angular diameter in degrees
+                                                    // Uses exact topocentric distance from Libration (in km)
+                                                    const moonRadiusKm = 1737.4; // Mean lunar radius
                                                     const distKm = lib.dist_km;
                                                     const angularDiameterDeg = (2 * Math.atan(moonRadiusKm / distKm)) * (180 / Math.PI);
-                                                    const angularDiameterDegrees = angularDiameterDeg.toFixed(3); // e.g. 0.532°
+                                                    const angularDiameterDegrees = angularDiameterDeg.toFixed(3); // e.g., "0.548"
 
-                                                                                return {
-                                                                                    angularDiameter: angularDiameterDegrees,
-                                                                                    illumination: illuminationPct,
-                                                                                    phaseValue: phaseValue,
-                                                                                    phaseName: phaseName,
-                                                                                    phaseAngle: phaseAngle
-                                                                                };
+                                                    return {
+                                                        angularDiameter: angularDiameterDegrees,
+                                                        illumination: illuminationPct,
+                                                        phaseValue: phaseValue,       // e.g., "1.00" at full, "0.00" at new
+                                                        phaseName: phaseName,
+                                                        phaseAngle: phaseAngle        // e.g., "179.8" near full
+                                                    };
                                                 }
                                                 
                                                                                 function updateQthPopup() {
